--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <h1>BHIMAVARAM WORLD CLASS HOSPITALS</h1>
 <header>
 <h1><marquee><font color=blue</font><i>Bhimavaram Hospitals 24*7 Services Avaliable Everyday::Chinnamiram,Bhimavaram-534204</marquee></h1>
-<h2>One of the largest hospitals in coastal Andhra Pradesh committed to ensure world class intergrated medical care</h2>
+<h2>One of the largests hospitals in coastal Andhra Pradesh committed to ensure world class intergrated medical care</h2>
 <img src="https://cdn.pixabay.com/photo/2016/11/08/05/29/surgery-1807541_1280.jpg" width="1700px" height="1000px"</img>
 <img src="https://thumbs.dreamstime.com/z/smiling-female-doctor-holding-medical-records-lab-coat-her-office-clipboard-looking-camera-56673035.jpg" width="1600px" height="1000px"</img>
 </section>
