--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <footer>
 
 <p>
-Bhimavaram Hospitals Limited is an unlisted public company incorporated on 20 August, 1998. It is classified as a public limited company and is located in Andhra Pradesh, Andhra Pradesh. It's authorized share capital is INR 14.00 cr and the total paid-up capital is INR 10.90 cr.
+Bhimavaram Hospitals Limited is an unlisted public company incorporated on 20 August, 1998. It is classified as a public limited company and is located in Andhra Pradesh, Andhra Pradesh. It's authorized share capital is INR 14.00 cr and the total paid-up capital is INR 10.90 crores.
 
 Bhimavaram Hospitals Limited's operating revenues range is INR 1 cr - 100 cr for the financial year ending on 31 March, 2017. It's EBITDA has increased by 21.29 % over the previous year. At the same time, it's book networth has increased by 18.55 %. Other performance and liquidity ratios are available here.
 
